include new strings

--- a/gbsplay/po/en.po
+++ b/gbsplay/po/en.po
@@ -1,4 +1,4 @@
-# $Id: en.po,v 1.12 2004/04/05 12:12:43 mitch Exp $
+# $Id: en.po,v 1.13 2004/06/03 18:45:31 mitch Exp $
 # English translations for gbsplay.
 # Copyright (C) 2003 Tobias Diedrich <ranma@gmx.at>
 # This file is distributed under GNU GPL.
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-04-05 14:13+0200\n"
-"PO-Revision-Date: 2004-04-05 14:13+0200\n"
+"POT-Creation-Date: 2004-06-03 20:41+0200\n"
+"PO-Revision-Date: 2004-06-03 20:44+0200\n"
 "Last-Translator: Tobias Diedrich <ranma@gmx.at>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -228,11 +228,12 @@ msgid ""
 "  -l  loop mode\n"
 "  -o  select output plugin (%s)\n"
 "      'list' shows available plugins\n"
-"  -q  quiet\n"
+"  -q  reduce verbosity\n"
 "  -r  set samplerate (%dHz)\n"
 "  -R  set refresh delay (%d milliseconds)\n"
 "  -t  set subsong timeout (%d seconds)\n"
 "  -T  set silence timeout (%d seconds)\n"
+"  -v  increase verbosity\n"
 "  -V  print version and exit\n"
 "  -z  play subsongs in shuffle mode\n"
 "  -Z  play subsongs in random mode (repetitions possible)\n"
@@ -247,11 +248,12 @@ msgstr ""
 "  -l  loop mode\n"
 "  -o  select output plugin (%s)\n"
 "      'list' shows available plugins\n"
-"  -q  quiet\n"
+"  -q  reduce verbosity\n"
 "  -r  set samplerate (%dHz)\n"
 "  -R  set refresh delay (%d milliseconds)\n"
 "  -t  set subsong timeout (%d seconds)\n"
 "  -T  set silence timeout (%d seconds)\n"
+"  -v  increase verbosity\n"
 "  -V  print version and exit\n"
 "  -z  play subsongs in shuffle mode\n"
 "  -Z  play subsongs in random mode (repetitions possible)\n"
