translate verbosity settings

--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -1,4 +1,4 @@
-# $Id: de.po,v 1.15 2004/04/05 12:14:08 mitch Exp $
+# $Id: de.po,v 1.16 2004/06/03 18:47:27 mitch Exp $
 # German translations for gbsplay.
 # Copyright (C) 2003-2004 Tobias Diedrich <ranma@gmx.at>
 #                         Christian Garbs <mitch@cgarbs.de>
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-04-05 14:13+0200\n"
-"PO-Revision-Date: 2004-04-05 14:15+0200\n"
+"POT-Creation-Date: 2004-06-03 20:41+0200\n"
+"PO-Revision-Date: 2004-06-03 20:46+0200\n"
 "Last-Translator: Christian Garbs <mitch@cgarbs.de>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -229,11 +229,12 @@ msgid ""
 "  -l  loop mode\n"
 "  -o  select output plugin (%s)\n"
 "      'list' shows available plugins\n"
-"  -q  quiet\n"
+"  -q  reduce verbosity\n"
 "  -r  set samplerate (%dHz)\n"
 "  -R  set refresh delay (%d milliseconds)\n"
 "  -t  set subsong timeout (%d seconds)\n"
 "  -T  set silence timeout (%d seconds)\n"
+"  -v  increase verbosity\n"
 "  -V  print version and exit\n"
 "  -z  play subsongs in shuffle mode\n"
 "  -Z  play subsongs in random mode (repetitions possible)\n"
@@ -248,12 +249,13 @@ msgstr ""
 "  -l  Endloswiedergabe\n"
 "  -o  Wahl der Ausgabemethode (%s)\n"
 "      'list' zeigt alle Möglichkeiten\n"
-"  -q  Ruhig\n"
+"  -q  Geschwätzigkeit verringern\n"
 "  -r  Abspielrate (%dHz)\n"
 "  -R  Verzögerung (%d Millisekunden)\n"
 "  -s  Auf die Standardausgabe schreiben\n"
 "  -t  Zeitlimit (%d Sekunden)\n"
 "  -T  Zeitlimit für Stille (%d Sekunden)\n"
+"  -v  Geschwätzigkeit erhöhen\n"
 "  -V  Version anzeigen und Programm beenden\n"
 "  -z  Subsongs durcheinandergewürfelt abspielen\n"
 "  -Z  Subsongs zufällig abspielen (Wiederholungen möglich)\n"
