separate SEE ALSO references by commas

--- a/gbsplay/gbsplay.in.1
+++ b/gbsplay/gbsplay.in.1
@@ -1,4 +1,4 @@
-.\" $Id: gbsplay.in.1,v 1.15 2004/06/03 18:37:41 mitch Exp $
+.\" $Id: gbsplay.in.1,v 1.16 2004/06/27 14:47:53 mitch Exp $
 .\" This manpage 2003-2004 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplay" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -101,7 +101,7 @@ Default location of the global configuration file.
 \fI~/\.gbsplayrc\fR
 User configuration file.
 .SH "SEE ALSO"
-\fIgbsinfo\fR(1)
+\fIgbsinfo\fR(1),
 \fIgbsplayrc\fR(5)
 .SH "BUG REPORTS"
 If you encounter bugs, please report them via \fIhttp://gbsplay.berlios.de/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
