--- a/gbsplay/gbsplayrc.in.5
+++ b/gbsplay/gbsplayrc.in.5
@@ -1,4 +1,4 @@
-.\" $Id: gbsplayrc.in.5,v 1.11 2004/06/03 16:19:38 ranmachan Exp $
+.\" $Id: gbsplayrc.in.5,v 1.12 2004/06/27 14:47:53 mitch Exp $
 .\" This manpage 2003-2004 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplayrc" "5" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -48,7 +48,7 @@ Default location of the global configuration file.
 \fI~/\.gbsplayrc\fR
 User configuration file.
 .SH "SEE ALSO"
-\fIgbsplay\fR(1)
+\fIgbsplay\fR(1),
 \fIgbsinfo\fR(1)
 .SH "BUG REPORTS"
 If you encounter bugs, please report them via \fIhttp://gbsplay.berlios.de/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
