--- a/gbsplay/gbsinfo.in.1
+++ b/gbsplay/gbsinfo.in.1
@@ -1,5 +1,5 @@
-.\" $Id: gbsinfo.in.1,v 1.4 2004/04/02 09:23:11 mitch Exp $
-.\" This manpage 2003-2004 (C) by Christian Garbs <mitch@cgarbs.de>
+.\" $Id: gbsinfo.in.1,v 1.5 2005/06/30 00:55:57 ranmachan Exp $
+.\" This manpage 2003-2005 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsinfo" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
 .SH "NAME"
@@ -25,6 +25,6 @@ The sound file to read.  Must be in uncompressed .GBS format.
 .SH "BUG REPORTS"
 If you encounter bugs, please report them via \fIhttp://gbsplay.berlios.de/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
 .SH "AUTHOR"
-gbsinfo was written by Tobias Diedrich <\fIranma@gmx.at\fR> (with contributions from others, see README).
+gbsinfo was written by Tobias Diedrich <\fIranma+gbsplay@tdiedrich.de\fR> (with contributions from others, see README).
 .SH "COPYRIGHT"
 gbsinfo is licensed under GNU GPL.
