--- a/gbsplay/gbsplay.in.1
+++ b/gbsplay/gbsplay.in.1
@@ -1,5 +1,5 @@
-.\" $Id: gbsplay.in.1,v 1.16 2004/06/27 14:47:53 mitch Exp $
-.\" This manpage 2003-2004 (C) by Christian Garbs <mitch@cgarbs.de>
+.\" $Id: gbsplay.in.1,v 1.17 2005/06/30 00:55:58 ranmachan Exp $
+.\" This manpage 2003-2005 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplay" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
 .SH "NAME"
@@ -106,6 +106,6 @@ User configuration file.
 .SH "BUG REPORTS"
 If you encounter bugs, please report them via \fIhttp://gbsplay.berlios.de/\fR or write to <\fIgbsplay-dev@lists.berlios.de\fR>.
 .SH "AUTHOR"
-gbsplay was written by Tobias Diedrich <\fIranma@gmx.at\fR> (with contributions from others, see README).
+gbsplay was written by Tobias Diedrich <\fIranma+gbsplay@tdiedrich.de\fR> (with contributions from others, see README).
 .SH "COPYRIGHT"
 gbsplay is licensed under GNU GPL.
