--- a/gbsplay/po/en.po
+++ b/gbsplay/po/en.po
@@ -1,6 +1,6 @@
-# $Id: en.po,v 1.13 2004/06/03 18:45:31 mitch Exp $
+# $Id: en.po,v 1.14 2005/06/30 00:56:06 ranmachan Exp $
 # English translations for gbsplay.
-# Copyright (C) 2003 Tobias Diedrich <ranma@gmx.at>
+# Copyright (C) 2003-2005 Tobias Diedrich <ranma+gbsplay@tdiedrich.de>
 # This file is distributed under GNU GPL.
 #
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-06-03 20:41+0200\n"
 "PO-Revision-Date: 2004-06-03 20:44+0200\n"
-"Last-Translator: Tobias Diedrich <ranma@gmx.at>\n"
+"Last-Translator: Tobias Diedrich <ranma+gbsplay@tdiedrich.de>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
