translation updates (mostly %d -> %ld)

--- a/gbsplay/po/de.po
+++ b/gbsplay/po/de.po
@@ -1,4 +1,4 @@
-# $Id: de.po,v 1.17 2005/06/30 00:56:06 ranmachan Exp $
+# $Id: de.po,v 1.18 2006/01/13 22:27:10 mitch Exp $
 # German translations for gbsplay.
 # Copyright (C) 2003-2005 Tobias Diedrich <ranma+gbsplay@tdiedrich.de>
 #                         Christian Garbs <mitch@cgarbs.de>
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-06-03 20:41+0200\n"
-"PO-Revision-Date: 2004-06-03 20:46+0200\n"
+"POT-Creation-Date: 2006-01-13 23:07+0100\n"
+"PO-Revision-Date: 2006-01-13 23:26+0100\n"
 "Last-Translator: Christian Garbs <mitch@cgarbs.de>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -71,12 +71,12 @@ msgid "%s: Can't start audio flow: %s\n"
 msgstr "%s: Kann den audio flow nicht starten: %s\n"
 
 #, c-format
-msgid "'%s' expected at %s line %d char %d.\n"
-msgstr "'%s' erwartet in %s Zeile %d Spalte %d.\n"
+msgid "'%s' expected at %s line %ld char %ld.\n"
+msgstr "'%s' erwartet in %s Zeile %ld Spalte %ld.\n"
 
 #, c-format
-msgid "(%d seconds)\n"
-msgstr "(%d Sekunden)\n"
+msgid "(%ld seconds)\n"
+msgstr "(%ld Sekunden)\n"
 
 msgid "Artist:"
 msgstr "Künstler:"
@@ -90,8 +90,8 @@ msgstr ""
 "\n"
 
 #, c-format
-msgid "CRC32:\t\t0x%08x/0x%08x (%s)\n"
-msgstr "CRC32:\t\t0x%08x/0x%08x (%s)\n"
+msgid "CRC32:\t\t0x%08lx/0x%08lx (%s)\n"
+msgstr "CRC32:\t\t0x%08lx/0x%08lx (%s)\n"
 
 msgid "Cancel"
 msgstr "Abbrechen"
@@ -118,7 +118,7 @@ msgid "Extended Info"
 msgstr "Erweiterte Informationen"
 
 msgid "Failed"
-msgstr "Fehlerhaft"
+msgstr "Fehlgeschlagen"
 
 msgid "File Info"
 msgstr "Dateiinformationen"
@@ -138,7 +138,7 @@ msgstr "GBS Version %d wird nicht unterstützt.\n"
 
 #, c-format
 msgid ""
-"GBSVersion:     %d\n"
+"GBSVersion:     %ld\n"
 "Title:          \"%s\"\n"
 "Author:         \"%s\"\n"
 "Copyright:      \"%s\"\n"
@@ -147,10 +147,10 @@ msgid ""
 "Play address:   0x%04x\n"
 "Stack pointer:  0x%04x\n"
 "File size:      0x%08x\n"
-"ROM size:       0x%08x (%d banks)\n"
-"Subsongs:       %d\n"
+"ROM size:       0x%08lx (%ld banks)\n"
+"Subsongs:       %ld\n"
 msgstr ""
-"GBSVersion:     %d\n"
+"GBSVersion:     %ld\n"
 "Titel:          \"%s\"\n"
 "Autor:          \"%s\"\n"
 "Copyright:      \"%s\"\n"
@@ -159,8 +159,8 @@ msgstr ""
 "Abspieladresse: 0x%04x\n"
 "Stack-Zeiger:   0x%04x\n"
 "Dateigrösse:    0x%08x\n"
-"ROM-Grösse:     0x%08x (%d Bänke)\n"
-"Subsongs:       %d\n"
+"ROM-Grösse:     0x%08lx (%ld Bänke)\n"
+"Subsongs:       %ld\n"
 
 msgid "Game:"
 msgstr "Spiel:"
@@ -190,8 +190,8 @@ msgid "Prev"
 msgstr "Vorheriger"
 
 #, c-format
-msgid "Requested rate %dHz, got %dHz.\n"
-msgstr "Angeforderte Samplingrate ist %dHz, tatsächliche ist %dHz.\n"
+msgid "Requested rate %ldHz, got %dHz.\n"
+msgstr "Samplingrate %ldHz angefordert, %ldHz erhalten.\n"
 
 msgid "Save"
 msgstr "Speichern"
@@ -200,19 +200,19 @@ msgid "Subsong"
 msgstr "Subsong"
 
 #, c-format
-msgid "Subsong %03d:\t"
-msgstr "Subsong %03d:\t"
+msgid "Subsong %03ld:\t"
+msgstr "Subsong %03ld:\t"
 
 #, c-format
-msgid "Subsong number out of range (min=0, max=%d).\n"
-msgstr "Subsong-Nummer außerhalb des Wertebereichs (min=0, max=%d).\n"
+msgid "Subsong number out of range (min=0, max=%ld).\n"
+msgstr "Subsong-Nummer außerhalb des Wertebereichs (min=0, max=%ld).\n"
 
 msgid "Title"
 msgstr "Titel"
 
 #, c-format
-msgid "Unknown option %s at %s line %d.\n"
-msgstr "Unbekannte Option %s in %s Zeile %d.\n"
+msgid "Unknown option %s at %s line %ld.\n"
+msgstr "Unbekannte Option %s in %s Zeile %ld.\n"
 
 msgid "Untitled"
 msgstr "Unbenannt"
@@ -223,17 +223,17 @@ msgid ""
 "\n"
 "Available options are:\n"
 "  -E  endian, b == big, l == little, n == native (%s)\n"
-"  -f  set fadeout (%d seconds)\n"
-"  -g  set subsong gap (%d seconds)\n"
+"  -f  set fadeout (%ld seconds)\n"
+"  -g  set subsong gap (%ld seconds)\n"
 "  -h  display this help and exit\n"
 "  -l  loop mode\n"
 "  -o  select output plugin (%s)\n"
 "      'list' shows available plugins\n"
 "  -q  reduce verbosity\n"
-"  -r  set samplerate (%dHz)\n"
-"  -R  set refresh delay (%d milliseconds)\n"
-"  -t  set subsong timeout (%d seconds)\n"
-"  -T  set silence timeout (%d seconds)\n"
+"  -r  set samplerate (%ldHz)\n"
+"  -R  set refresh delay (%ld milliseconds)\n"
+"  -t  set subsong timeout (%ld seconds)\n"
+"  -T  set silence timeout (%ld seconds)\n"
 "  -v  increase verbosity\n"
 "  -V  print version and exit\n"
 "  -z  play subsongs in shuffle mode\n"
@@ -243,18 +243,17 @@ msgstr ""
 "\n"
 "Verfügbare Optionen sind:\n"
 "  -E  endian, b == big, l == little, n == native (%s)\n"
-"  -f  Ausblendzeit (%d Sekunden)\n"
-"  -g  Lücke (%d Sekunden)\n"
+"  -f  Ausblendzeit (%ld Sekunden)\n"
+"  -g  Pause zwischen Subsongs (%ld Sekunden)\n"
 "  -h  Diese Hilfe anzeigen und Programm beenden\n"
 "  -l  Endloswiedergabe\n"
 "  -o  Wahl der Ausgabemethode (%s)\n"
 "      'list' zeigt alle Möglichkeiten\n"
 "  -q  Geschwätzigkeit verringern\n"
-"  -r  Abspielrate (%dHz)\n"
-"  -R  Verzögerung (%d Millisekunden)\n"
-"  -s  Auf die Standardausgabe schreiben\n"
-"  -t  Zeitlimit (%d Sekunden)\n"
-"  -T  Zeitlimit für Stille (%d Sekunden)\n"
+"  -r  Abspielrate (%ldHz)\n"
+"  -R  Anzeigeverzögerung (%ld Millisekunden)\n"
+"  -t  Subsong Zeitlimit (%ld Sekunden)\n"
+"  -T  Subsong Zeitlimit für Stille (%ld Sekunden)\n"
 "  -v  Geschwätzigkeit erhöhen\n"
 "  -V  Version anzeigen und Programm beenden\n"
 "  -z  Subsongs durcheinandergewürfelt abspielen\n"
@@ -299,8 +298,8 @@ msgid "ioctl(fd, SNDCTL_DSP_SETFRAGMENT, %08x) failed: %s\n"
 msgstr "ioctl(fd, SNDCTL_DSP_SETFRAGMENT, %08x) fehlgeschlagen: %s\n"
 
 #, c-format
-msgid "ioctl(fd, SNDCTL_DSP_SPEED, %d) failed: %s\n"
-msgstr "ioctl(fd, SNDCTL_DSP_SPEED, %d) fehlgeschlagen: %s\n"
+msgid "ioctl(fd, SNDCTL_DSP_SPEED, %ld) failed: %s\n"
+msgstr "ioctl(fd, SNDCTL_DSP_SPEED, %ld) fehlgeschlagen: %s\n"
 
 #, c-format
 msgid "ioctl(fd, SNDCTL_DSP_STEREO, %d) failed: %s\n"
