--- a/gbsplay/po/en.po
+++ b/gbsplay/po/en.po
@@ -1,4 +1,4 @@
-# $Id: en.po,v 1.14 2005/06/30 00:56:06 ranmachan Exp $
+# $Id: en.po,v 1.15 2006/01/13 22:27:11 mitch Exp $
 # English translations for gbsplay.
 # Copyright (C) 2003-2005 Tobias Diedrich <ranma+gbsplay@tdiedrich.de>
 # This file is distributed under GNU GPL.
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-06-03 20:41+0200\n"
-"PO-Revision-Date: 2004-06-03 20:44+0200\n"
+"POT-Creation-Date: 2006-01-13 23:07+0100\n"
+"PO-Revision-Date: 2006-01-13 23:12+0100\n"
 "Last-Translator: Tobias Diedrich <ranma+gbsplay@tdiedrich.de>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -70,12 +70,12 @@ msgid "%s: Can't start audio flow: %s\n"
 msgstr "%s: Can't start audio flow: %s\n"
 
 #, c-format
-msgid "'%s' expected at %s line %d char %d.\n"
-msgstr "'%s' expected at %s line %d char %d.\n"
+msgid "'%s' expected at %s line %ld char %ld.\n"
+msgstr "'%s' expected at %s line %ld char %ld.\n"
 
 #, c-format
-msgid "(%d seconds)\n"
-msgstr "(%d seconds)\n"
+msgid "(%ld seconds)\n"
+msgstr "(%ld seconds)\n"
 
 msgid "Artist:"
 msgstr "Artist:"
@@ -89,8 +89,8 @@ msgstr ""
 "\n"
 
 #, c-format
-msgid "CRC32:\t\t0x%08x/0x%08x (%s)\n"
-msgstr "CRC32:\t\t0x%08x/0x%08x (%s)\n"
+msgid "CRC32:\t\t0x%08lx/0x%08lx (%s)\n"
+msgstr "CRC32:\t\t0x%08lx/0x%08lx (%s)\n"
 
 msgid "Cancel"
 msgstr "Cancel"
@@ -137,7 +137,7 @@ msgstr "GBS Version %d unsupported.\n"
 
 #, c-format
 msgid ""
-"GBSVersion:     %d\n"
+"GBSVersion:     %ld\n"
 "Title:          \"%s\"\n"
 "Author:         \"%s\"\n"
 "Copyright:      \"%s\"\n"
@@ -146,10 +146,10 @@ msgid ""
 "Play address:   0x%04x\n"
 "Stack pointer:  0x%04x\n"
 "File size:      0x%08x\n"
-"ROM size:       0x%08x (%d banks)\n"
-"Subsongs:       %d\n"
+"ROM size:       0x%08lx (%ld banks)\n"
+"Subsongs:       %ld\n"
 msgstr ""
-"GBSVersion:     %d\n"
+"GBSVersion:     %ld\n"
 "Title:          \"%s\"\n"
 "Author:         \"%s\"\n"
 "Copyright:      \"%s\"\n"
@@ -158,8 +158,8 @@ msgstr ""
 "Play address:   0x%04x\n"
 "Stack pointer:  0x%04x\n"
 "File size:      0x%08x\n"
-"ROM size:       0x%08x (%d banks)\n"
-"Subsongs:       %d\n"
+"ROM size:       0x%08lx (%ld banks)\n"
+"Subsongs:       %ld\n"
 
 msgid "Game:"
 msgstr "Game:"
@@ -189,8 +189,8 @@ msgid "Prev"
 msgstr "Prev"
 
 #, c-format
-msgid "Requested rate %dHz, got %dHz.\n"
-msgstr "Requested rate %dHz, got %dHz.\n"
+msgid "Requested rate %ldHz, got %dHz.\n"
+msgstr "Requested rate %ldHz, got %dHz.\n"
 
 msgid "Save"
 msgstr "Save"
@@ -199,19 +199,19 @@ msgid "Subsong"
 msgstr "Subsong"
 
 #, c-format
-msgid "Subsong %03d:\t"
-msgstr "Subsong %03d:\t"
+msgid "Subsong %03ld:\t"
+msgstr "Subsong %03ld:\t"
 
 #, c-format
-msgid "Subsong number out of range (min=0, max=%d).\n"
-msgstr "Subsong number out of range (min=0, max=%d).\n"
+msgid "Subsong number out of range (min=0, max=%ld).\n"
+msgstr "Subsong number out of range (min=0, max=%ld).\n"
 
 msgid "Title"
 msgstr "Title"
 
 #, c-format
-msgid "Unknown option %s at %s line %d.\n"
-msgstr "Unknown option %s at %s line %d.\n"
+msgid "Unknown option %s at %s line %ld.\n"
+msgstr "Unknown option %s at %s line %ld.\n"
 
 msgid "Untitled"
 msgstr "Untitled"
@@ -222,17 +222,17 @@ msgid ""
 "\n"
 "Available options are:\n"
 "  -E  endian, b == big, l == little, n == native (%s)\n"
-"  -f  set fadeout (%d seconds)\n"
-"  -g  set subsong gap (%d seconds)\n"
+"  -f  set fadeout (%ld seconds)\n"
+"  -g  set subsong gap (%ld seconds)\n"
 "  -h  display this help and exit\n"
 "  -l  loop mode\n"
 "  -o  select output plugin (%s)\n"
 "      'list' shows available plugins\n"
 "  -q  reduce verbosity\n"
-"  -r  set samplerate (%dHz)\n"
-"  -R  set refresh delay (%d milliseconds)\n"
-"  -t  set subsong timeout (%d seconds)\n"
-"  -T  set silence timeout (%d seconds)\n"
+"  -r  set samplerate (%ldHz)\n"
+"  -R  set refresh delay (%ld milliseconds)\n"
+"  -t  set subsong timeout (%ld seconds)\n"
+"  -T  set silence timeout (%ld seconds)\n"
 "  -v  increase verbosity\n"
 "  -V  print version and exit\n"
 "  -z  play subsongs in shuffle mode\n"
@@ -242,17 +242,17 @@ msgstr ""
 "\n"
 "Available options are:\n"
 "  -E  endian, b == big, l == little, n == native (%s)\n"
-"  -f  set fadeout (%d seconds)\n"
-"  -g  set subsong gap (%d seconds)\n"
+"  -f  set fadeout (%ld seconds)\n"
+"  -g  set subsong gap (%ld seconds)\n"
 "  -h  display this help and exit\n"
 "  -l  loop mode\n"
 "  -o  select output plugin (%s)\n"
 "      'list' shows available plugins\n"
 "  -q  reduce verbosity\n"
-"  -r  set samplerate (%dHz)\n"
-"  -R  set refresh delay (%d milliseconds)\n"
-"  -t  set subsong timeout (%d seconds)\n"
-"  -T  set silence timeout (%d seconds)\n"
+"  -r  set samplerate (%ldHz)\n"
+"  -R  set refresh delay (%ld milliseconds)\n"
+"  -t  set subsong timeout (%ld seconds)\n"
+"  -T  set silence timeout (%ld seconds)\n"
 "  -v  increase verbosity\n"
 "  -V  print version and exit\n"
 "  -z  play subsongs in shuffle mode\n"
@@ -297,8 +297,8 @@ msgid "ioctl(fd, SNDCTL_DSP_SETFRAGMENT, %08x) failed: %s\n"
 msgstr "ioctl(fd, SNDCTL_DSP_SETFRAGMENT, %08x) failed: %s\n"
 
 #, c-format
-msgid "ioctl(fd, SNDCTL_DSP_SPEED, %d) failed: %s\n"
-msgstr "ioctl(fd, SNDCTL_DSP_SPEED, %d) failed: %s\n"
+msgid "ioctl(fd, SNDCTL_DSP_SPEED, %ld) failed: %s\n"
+msgstr "ioctl(fd, SNDCTL_DSP_SPEED, %ld) failed: %s\n"
 
 #, c-format
 msgid "ioctl(fd, SNDCTL_DSP_STEREO, %d) failed: %s\n"
