--- a/gbsplay/HISTORY
+++ b/gbsplay/HISTORY
@@ -1,11 +1,11 @@
-<<$Id: HISTORY,v 1.19 2006/01/14 20:57:09 mitch Exp $>>
+<<$Id: HISTORY,v 1.20 2006/01/14 21:11:22 mitch Exp $>>
 
 
 gbsplay HISTORY
 
 
-2006/01/14  -  0.0.8
-~~~~~~~~~~~~~~~~~~~~
+2006/xx/xx  -  0.0.7cvs
+~~~~~~~~~~~~~~~~~~~~~~~
 
 Enhancements:
 
