--- a/gbsplay/README
+++ b/gbsplay/README
@@ -1,8 +1,8 @@
-<<$Id: README,v 1.8 2005/06/30 00:55:55 ranmachan Exp $>>
+<<$Id: README,v 1.9 2006/01/21 13:30:59 mitch Exp $>>
 
 gbsplay - A Gameboy sound player
 
-(C) 2003-2005 by Tobias Diedrich <ranma+gbsplay@tdiedrich.de>
+(C) 2003-2006 by Tobias Diedrich <ranma+gbsplay@tdiedrich.de>
                  Christian Garbs <mitch@cgarbs.de>
                  Maximilian Rehkopf <otakon@gmx.net>
 
