prepare for next verison

--- a/gbsplay/HISTORY
+++ b/gbsplay/HISTORY
@@ -1,7 +1,13 @@
-<<$Id: HISTORY,v 1.21 2006/01/21 13:32:09 mitch Exp $>>
+<<$Id: HISTORY,v 1.22 2006/01/21 13:36:57 mitch Exp $>>
 
 
 gbsplay HISTORY
+
+
+2006/xx/xx  -  0.0.8cvs
+~~~~~~~~~~~~~~~~~~~~~~~
+
+
 
 
 2006/01/21  -  0.0.8
