allow channel mute on gbsplay startup
based on an idea by Fabio Scotoni <fabio@esse.ch>

--- a/gbsplay/gbsplay.in.1
+++ b/gbsplay/gbsplay.in.1
@@ -1,4 +1,4 @@
-.\" $Id: gbsplay.in.1,v 1.17 2005/06/30 00:55:58 ranmachan Exp $
+.\" $Id: gbsplay.in.1,v 1.18 2008/06/20 20:36:57 mitch Exp $
 .\" This manpage 2003-2005 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplay" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -57,6 +57,18 @@ Play subsongs in shuffle mode.  Every subsong will be played once in random orde
 .TP
 \fI\-Z\fR
 Play subsongs in random mode.  Like shuffle mode, but a subsong can be played multiple times.
+.TP
+\fI\-1\fR
+Mute channel 1 on start.
+.TP
+\fI\-2\fR
+Mute channel 2 on start.
+.TP
+\fI\-3\fR
+Mute channel 3 on start.
+.TP
+\fI\-4\fR
+Mute channel 4 on start.
 .SH "PARAMETERS"
 .TP
 \fIgbs\-file\fR
