--- a/gbsplay/po/en.po
+++ b/gbsplay/po/en.po
@@ -1,4 +1,4 @@
-# $Id: en.po,v 1.16 2006/01/13 22:36:16 mitch Exp $
+# $Id: en.po,v 1.17 2008/06/20 20:37:16 mitch Exp $
 # English translations for gbsplay.
 # Copyright (C) 2003-2006 Tobias Diedrich <ranma+gbsplay@tdiedrich.de>
 # This file is distributed under GNU GPL.
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.0.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-01-13 23:07+0100\n"
-"PO-Revision-Date: 2006-01-13 23:12+0100\n"
+"POT-Creation-Date: 2008-06-20 22:20+0200\n"
+"PO-Revision-Date: 2008-06-20 22:22+0200\n"
 "Last-Translator: Tobias Diedrich <ranma+gbsplay@tdiedrich.de>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -107,6 +107,10 @@ msgid "Could not open /dev/dsp: %s\n"
 msgstr "Could not open /dev/dsp: %s\n"
 
 #, c-format
+msgid "Could not open ALSA PCM device '%s': %s\n"
+msgstr "Could not open ALSA PCM device '%s': %s\n"
+
+#, c-format
 msgid "Could not open output plugin \"%s\"\n"
 msgstr "Could not open output plugin \"%s\"\n"
 
@@ -167,6 +171,12 @@ msgstr "Game:"
 msgid "Length    "
 msgstr "Length    "
 
+msgid "Memory allocation failed!"
+msgstr "Memory allocation failed!"
+
+msgid "Memory allocation failed!\n"
+msgstr "Memory allocation failed!\n"
+
 msgid "Next"
 msgstr "Next"
 
@@ -221,42 +231,44 @@ msgid ""
 "Usage: %s [option(s)] <gbs-file> [start_at_subsong [stop_at_subsong] ]\n"
 "\n"
 "Available options are:\n"
-"  -E  endian, b == big, l == little, n == native (%s)\n"
-"  -f  set fadeout (%ld seconds)\n"
-"  -g  set subsong gap (%ld seconds)\n"
-"  -h  display this help and exit\n"
-"  -l  loop mode\n"
-"  -o  select output plugin (%s)\n"
-"      'list' shows available plugins\n"
-"  -q  reduce verbosity\n"
-"  -r  set samplerate (%ldHz)\n"
-"  -R  set refresh delay (%ld milliseconds)\n"
-"  -t  set subsong timeout (%ld seconds)\n"
-"  -T  set silence timeout (%ld seconds)\n"
-"  -v  increase verbosity\n"
-"  -V  print version and exit\n"
-"  -z  play subsongs in shuffle mode\n"
-"  -Z  play subsongs in random mode (repetitions possible)\n"
+"  -E        endian, b == big, l == little, n == native (%s)\n"
+"  -f        set fadeout (%ld seconds)\n"
+"  -g        set subsong gap (%ld seconds)\n"
+"  -h        display this help and exit\n"
+"  -l        loop mode\n"
+"  -o        select output plugin (%s)\n"
+"            'list' shows available plugins\n"
+"  -q        reduce verbosity\n"
+"  -r        set samplerate (%ldHz)\n"
+"  -R        set refresh delay (%ld milliseconds)\n"
+"  -t        set subsong timeout (%ld seconds)\n"
+"  -T        set silence timeout (%ld seconds)\n"
+"  -v        increase verbosity\n"
+"  -V        print version and exit\n"
+"  -z        play subsongs in shuffle mode\n"
+"  -Z        play subsongs in random mode (repetitions possible)\n"
+"  -1 to -4  mute a channel on startup\n"
 msgstr ""
 "Usage: %s [option(s)] <gbs-file> [start_at_subsong [stop_at_subsong] ]\n"
 "\n"
 "Available options are:\n"
-"  -E  endian, b == big, l == little, n == native (%s)\n"
-"  -f  set fadeout (%ld seconds)\n"
-"  -g  set subsong gap (%ld seconds)\n"
-"  -h  display this help and exit\n"
-"  -l  loop mode\n"
-"  -o  select output plugin (%s)\n"
-"      'list' shows available plugins\n"
-"  -q  reduce verbosity\n"
-"  -r  set samplerate (%ldHz)\n"
-"  -R  set refresh delay (%ld milliseconds)\n"
-"  -t  set subsong timeout (%ld seconds)\n"
-"  -T  set silence timeout (%ld seconds)\n"
-"  -v  increase verbosity\n"
-"  -V  print version and exit\n"
-"  -z  play subsongs in shuffle mode\n"
-"  -Z  play subsongs in random mode (repetitions possible)\n"
+"  -E        endian, b == big, l == little, n == native (%s)\n"
+"  -f        set fadeout (%ld seconds)\n"
+"  -g        set subsong gap (%ld seconds)\n"
+"  -h        display this help and exit\n"
+"  -l        loop mode\n"
+"  -o        select output plugin (%s)\n"
+"            'list' shows available plugins\n"
+"  -q        reduce verbosity\n"
+"  -r        set samplerate (%ldHz)\n"
+"  -R        set refresh delay (%ld milliseconds)\n"
+"  -t        set subsong timeout (%ld seconds)\n"
+"  -T        set silence timeout (%ld seconds)\n"
+"  -v        increase verbosity\n"
+"  -V        print version and exit\n"
+"  -z        play subsongs in shuffle mode\n"
+"  -Z        play subsongs in random mode (repetitions possible)\n"
+"  -1 to -4  mute a channel on startup\n"
 
 #, c-format
 msgid ""
@@ -306,6 +318,42 @@ msgstr "ioctl(fd, SNDCTL_DSP_STEREO, %d) failed: %s\n"
 
 msgid "no time limit"
 msgstr "no time limit"
+
+#, c-format
+msgid "snd_pcm_hw_params failed: %s\n"
+msgstr "snd_pcm_hw_params failed: %s\n"
+
+#, c-format
+msgid "snd_pcm_hw_params_any failed: %s\n"
+msgstr "snd_pcm_hw_params_any failed: %s\n"
+
+#, c-format
+msgid "snd_pcm_hw_params_set_access failed: %s\n"
+msgstr "snd_pcm_hw_params_set_access failed: %s\n"
+
+#, c-format
+msgid "snd_pcm_hw_params_set_buffer_size failed: %s\n"
+msgstr "snd_pcm_hw_params_set_buffer_size failed: %s\n"
+
+#, c-format
+msgid "snd_pcm_hw_params_set_channels failed: %s\n"
+msgstr "snd_pcm_hw_params_set_channels failed: %s\n"
+
+#, c-format
+msgid "snd_pcm_hw_params_set_format failed: %s\n"
+msgstr "snd_pcm_hw_params_set_format failed: %s\n"
+
+#, c-format
+msgid "snd_pcm_hw_params_set_periods failed: %s\n"
+msgstr "snd_pcm_hw_params_set_periods failed: %s\n"
+
+#, c-format
+msgid "snd_pcm_hw_params_set_rate_near failed: %s\n"
+msgstr "snd_pcm_hw_params_set_rate_near failed: %s\n"
+
+#, c-format
+msgid "snd_pcm_writei failed: %s\n"
+msgstr "snd_pcm_writei failed: %s\n"
 
 msgid "untitled"
 msgstr "untitled"
