--- a/gbsplay/HISTORY
+++ b/gbsplay/HISTORY
@@ -1,7 +1,13 @@
-<<$Id: HISTORY,v 1.26 2008/06/21 12:44:12 mitch Exp $>>
+<<$Id: HISTORY,v 1.27 2008/06/21 12:50:21 mitch Exp $>>
 
 
 gbsplay HISTORY
+
+
+2008/xx/xx  -  0.0.9cvs
+~~~~~~~~~~~~~~~~~~~~~~~
+
+ -
 
 
 2008/06/21  -  0.0.9  (the Still Alive release)
