prepare next version

--- a/gbsplay/HISTORY
+++ b/gbsplay/HISTORY
@@ -1,7 +1,11 @@
-<<$Id: HISTORY,v 1.28 2008/06/21 13:00:08 mitch Exp $>>
+<<$Id: HISTORY,v 1.29 2008/06/21 13:01:16 mitch Exp $>>
 
 
 gbsplay HISTORY
+
+
+2008/xx/xx  -  0.0.9cvs
+~~~~~~~~~~~~~~~~~~~~
 
 
 2008/06/21  -  0.0.9  (the Still Alive release)
