from Debian package gbsplay_0.0.8+dfsg1-3.diff.gz

--- a/gbsplay/gbsplayrc.in.5
+++ b/gbsplay/gbsplayrc.in.5
@@ -1,4 +1,4 @@
-.\" $Id: gbsplayrc.in.5,v 1.13 2005/06/30 00:55:58 ranmachan Exp $
+.\" $Id: gbsplayrc.in.5,v 1.14 2008/06/27 17:01:08 ranmachan Exp $
 .\" This manpage 2003-2005 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL.
 .TH "gbsplayrc" "5" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
@@ -16,7 +16,7 @@ A single character denoting the endianness. n == native endian, l == little endi
 .IP Integer
 An integer number in decimal.
 .IP Plugin
-The name of an output plugin.  Run \fIgbsplay -o list\fR to get a list of all available output plugins.
+The name of an output plugin.  Run \fIgbsplay \-o list\fR to get a list of all available output plugins.
 .SH "OPTIONS"
 .IP "endian = \fIEndian\fR"
 The output endianness.
